# RPD

./: .env.example  .gitignore  AGENTS.md  DESIGN.md  package-lock.json  package.json  playwright.config.js  start-admin.sh  syllabus.md
.claude/: launch.json
.githooks/: pre-push
.tmp/: crontab-backup-20260406-005024.txt  dump_children.py  dump_submissions.py  (+4 more)
tools/lessonforge/: .gitignore  lessonforge.config.yaml  package-lock.json  package.json  pyproject.toml  week_video_map.yaml
tools/lessonforge/scripts/week02/: seg01-install.md  seg02-preferences.md  seg03-ui-overview.md  seg04-viewport-navigation.md  seg05-transform-grs.md  seg06-apply-transform-origin.md  segA-install-prefs.md  segB-ui-viewport.md  segC-transform-apply.md
tools/lessonforge/src/lessonforge/: __init__.py  cli.py  config.py  manifest.py  subtitles.py
tools/lessonforge/src/lessonforge/compositor/: builder.py  ffmpeg_compose.py  title_card.py
tools/lessonforge/src/lessonforge/narration/: __init__.py  base.py  edge_tts_engine.py  elevenlabs_engine.py
tools/lessonforge/src/lessonforge/parser/: __init__.py  lecture_parser.py  models.py  script_generator.py  slide_parser.py
tools/lessonforge/src/lessonforge/publisher/: __init__.py  metadata.py  youtube.py
tools/lessonforge/src/lessonforge/recording/: __init__.py  blender_agent.py  browser_agent.py  edit_agent.py  keystroke_logger.py  obs_controller.py  recorder.py  scene_planner.py
tools/lessonforge/src/lessonforge/recording/blender_scripts/: __init__.py  week02_demo.py
tools/lessonforge/tests/: test_subtitles.py
weeks/: README.md  (+3 more)
(+504 files in other folders)
